Fix File Upload status background colour
File Upload component status no longer blends into the background in
certain interactions. This means that the File Upload status text does
not appear to be misaligned with the button.

--- a/packages/govuk-frontend/src/govuk/components/file-upload/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/file-upload/_index.scss
@@ -94,10 +94,11 @@
     display: block;
     margin-bottom: govuk-spacing(2);
     padding: govuk-spacing(3) govuk-spacing(2);
+    background-color: govuk-colour("white");
     text-align: left;
   }
 
-  .govuk-file-upload__status--empty {
+  .govuk-file-upload__button--empty .govuk-file-upload__status {
     color: govuk-shade(govuk-colour("blue"), 60%);
     background-color: govuk-tint(govuk-colour("blue"), 70%);
   }
@@ -115,8 +116,8 @@
     width: 100%;
     // align the padding to be same as notification banner and error summary accounting for the thicker borders
     padding: (govuk-spacing(3) + $govuk-border-width - $file-upload-border-width);
-    border: $file-upload-border-width govuk-colour("mid-grey") dashed;
-    background-color: govuk-colour("white");
+    border: $file-upload-border-width govuk-colour("mid-grey") solid;
+    background-color: govuk-colour("light-grey");
     cursor: pointer;
 
     @include govuk-media-query($from: tablet) {
@@ -124,15 +125,31 @@
     }
   }
 
+  .govuk-file-upload__button--empty {
+    border-style: dashed;
+    background-color: govuk-colour("white");
+  }
+
+  .govuk-file-upload__button.govuk-file-upload__button--empty:hover {
+    background-color: govuk-colour("light-grey");
+  }
+
   .govuk-file-upload__button:disabled {
     pointer-events: none;
     opacity: 0.5;
   }
 
-  .govuk-file-upload__button--dragging:not(:disabled),
+  .govuk-file-upload__button--dragging.govuk-file-upload__button,
   .govuk-file-upload__button:hover {
-    border-color: govuk-shade(govuk-colour("mid-grey"), 20%);
+    background-color: govuk-tint(govuk-colour("mid-grey"), 20%);
+  }
+
+  .govuk-file-upload__button--dragging.govuk-file-upload__button--empty {
     background-color: govuk-colour("light-grey");
+  }
+
+  .govuk-file-upload__button--dragging:not(:disabled) {
+    border-color: govuk-shade(govuk-colour("mid-grey"), 20%);
   }
 
   .govuk-file-upload__button--dragging:not(:disabled) .govuk-file-upload__pseudo-button,
@@ -140,18 +157,19 @@
     background-color: govuk-shade(govuk-colour("light-grey"), 10%);
   }
 
-  .govuk-file-upload__button--dragging:not(:disabled) {
-    border: $file-upload-border-width solid govuk-colour("black");
-  }
-
-  .govuk-file-upload__button--dragging:not(:disabled) .govuk-file-upload__status--empty,
-  .govuk-file-upload__button:hover .govuk-file-upload__status--empty,
-  .govuk-file-upload__button:focus .govuk-file-upload__status--empty {
+  .govuk-file-upload__button--empty.govuk-file-upload__button--dragging:not(:disabled) .govuk-file-upload__status,
+  .govuk-file-upload__button--empty:hover .govuk-file-upload__status,
+  .govuk-file-upload__button--empty:focus .govuk-file-upload__status {
     background-color: govuk-tint(govuk-colour("blue"), 80%);
   }
 
-  .govuk-file-upload__button--dragging .govuk-file-upload__pseudo-button {
+  .govuk-file-upload__button .govuk-file-upload__pseudo-button,
+  .govuk-file-upload__button--empty.govuk-file-upload__button--dragging .govuk-file-upload__pseudo-button {
     background-color: govuk-colour("white");
+  }
+
+  .govuk-file-upload__button--empty .govuk-file-upload__pseudo-button {
+    background-color: govuk-colour("light-grey");
   }
 
   .govuk-file-upload__button:active,
@@ -160,13 +178,18 @@
     outline: $govuk-focus-width solid $govuk-focus-colour;
     // Ensure outline appears outside of the element
     outline-offset: 0;
-    background-color: govuk-colour("light-grey");
+    background-color: govuk-tint(govuk-colour("mid-grey"), 20%);
     // Double the border by adding its width again. Use `box-shadow` for this
     // instead of changing `border-width` - this is for consistency with
     // components such as textarea where we avoid changing `border-width` as
     // it will change the element size. Also, `outline` cannot be utilised
     // here as it is already used for the yellow focus state.
     box-shadow: inset 0 0 0 $govuk-border-width-form-element;
+  }
+
+  .govuk-file-upload__button--empty:active,
+  .govuk-file-upload__button--empty:focus {
+    background-color: govuk-colour("light-grey");
   }
 
   .govuk-file-upload__button:focus .govuk-file-upload__pseudo-button {
